@@ -1,3 +1,10 @@
+2009-07-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* src/calendar/base/content/agenda-listbox.js
+	(deleteItemsFromCalendar): we cannot duplicate the array of nodes
+	with Array.splice with Mozilla 1.8, therefore we wander the
+	nodeList reversely.
+
 2009-07-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* src/calendar/base/src/calDavCalendar.js (safeRefresh): fixed
